# hookit

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: agent-builder.yml  agent-idle-monitor.yml  agent-planner.yml  agent-reviewer.yml  agent-watchdog.yml  auto-merge.yml  ci.yml
agents/: builder.md  planner.md  reviewer.md
app/: __init__.py  main.py  middleware.py  seed_showcase.py
app/auth/: dependencies.py
app/core/: __init__.py  config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  api_key.py  delivery.py  delivery_attempt.py  demo.py  endpoint.py  event.py  idempotency.py  project.py
app/routers/: _pagination.py  deliveries.py  endpoints.py  events.py  me.py  metrics.py  projects.py  showcase.py  showcase_ledger.py  simulate.py
app/schemas/: _reserved.py  delivery.py  endpoint.py  event.py  metrics.py  project.py  showcase.py  simulate.py
app/services/: api_keys.py  crypto.py  demo_events.py  event_ingestion.py  fly_machines.py  idle_watchdog.py  metrics.py  showcase.py  showcase_ledger.py  simulate.py  ssrf.py  transform.py
app/static/: index.html
app/worker/: __init__.py  __main__.py  backoff.py  delivery_worker.py  signing.py
benchmark/: README.md  __init__.py  __main__.py  runner.py
demo/: README.md  _shared.py  run_all.sh  scenario_1_failure_backoff_deadletter.py  scenario_2_redrive.py  scenario_3_idempotency.py  scenario_4_crash_recovery.py
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  DEPLOY.md  INITIAL_ISSUES.md  PROJECT_SPEC.md  QUALITY_BAR.md  ROADMAP.md  SHOWCASE_PLAN.md
migrations/: env.py
migrations/versions/: 3a8f1c2d4e9b_add_projects_and_api_keys.py  4cfcf3406bef_initial_empty_migration.py  a1b2c3d4e5f6_add_payload_format_to_endpoints.py  a3b4c5d6e7f8_add_demo_visitor_activity.py  b2c3d4e5f6a7_add_delivery_attempts_table.py  c1d2e3f4a5b6_add_rate_limit_rps_to_endpoints.py  (+6 more)
producer/: README.md  __init__.py  __main__.py  client.py  prices.py  settings.py  trades.py
tests/: conftest.py  test_auth.py  test_benchmark.py  test_config.py  test_configurable_receiver.py  test_db.py  test_deliveries.py  test_demo_receiver.py  test_e2e.py  test_endpoints.py  test_events.py  test_fly_machines.py  test_health.py  test_idle_watchdog.py  test_listen_notify.py  test_metrics.py  test_middleware.py  test_migrations.py  test_models.py  test_producer_client.py  test_producer_prices.py  test_producer_trades.py  test_projects.py  test_showcase.py  test_showcase_ledger.py  test_simulate.py  test_ssrf.py  test_transform.py  test_visitor_activity.py  test_worker.py
tools/: configurable_receiver.py  demo_receiver.py
