[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reliable_webhook_platform"
version = "0.1.0"
description = "Reliable Webhook Delivery Platform — a production-style async webhook delivery backend."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jinhobh" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# A pragmatic, not-exhaustive rule set. Agents must justify any added ignores.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and slightly looser conventions.
"tests/**" = ["B011"]
# FastAPI requires Depends() in function-argument defaults (B008) — this is
# the idiomatic dependency-injection pattern that the framework introspects
# at startup; suppressing it here is correct and expected for FastAPI projects.
"app/**" = ["B008"]
# Demo scripts insert the project root into sys.path so they can be run both
# as `python demo/scenario_X.py` and `python -m demo.scenario_X`; this
# unavoidably places imports after a non-import statement (E402).
"demo/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# mypy: static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
